Fixing gap size

--- a/styles/compile/gap.sass
+++ b/styles/compile/gap.sass
@@ -18,6 +18,9 @@ div[is="gap"]
   @include min($screen-m)
     height: units(12)
 
+    &.extra-small
+      height: units(4)
+
     &.small
       height: units(8)
     
